[package]
name = "ieaoo"
version = "0.1.0"
authors = ["ZengGengSen <zenggengsen@outlook.com>"]
edition = "2021"
license = "MIT"

[dependencies]

# 只在 Windows 下编译
[target.'cfg(windows)'.dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem"
]
